--- a/FamilyBudget/Views/Modal/CategoryCreate.cshtml
+++ b/FamilyBudget/Views/Modal/CategoryCreate.cshtml
@@ -1,4 +1,4 @@
-﻿@model FamilyBudget.Models.Category
+﻿@model FamilyBudget.ModalViewModels.CategoryModel
 
 @{
     ViewData["Title"] = "CategoryCreate";
