--- a/FamilyBudget/Views/Modal/ProjectMemberEdit.cshtml
+++ b/FamilyBudget/Views/Modal/ProjectMemberEdit.cshtml
@@ -1,5 +1,5 @@
 ﻿@model FamilyBudget.ModalViewModels.ProjectMemberModel
 
 @{
-    ViewData["Title"] = "ProjectMemberCreate";
+    ViewData["Title"] = "ProjectMemberEdit";
 }
