--- a/FamilyBudget/Views/Home/Edit.cshtml
+++ b/FamilyBudget/Views/Home/Edit.cshtml
@@ -20,12 +20,12 @@
                 <input type="hidden" asp-for="@Model.project.Id" />
                 <input type="hidden" asp-for="@Model.project.OwnerId" />
                 <span asp-validation-for="@Model.project.Name" class="text-danger"></span>
-            </div>
-
+            </div>      
+        </form>
             <div class="row">
                 <div class="col-4">
                     <h4 class="text-center">Categories</h4>
-                    <a class="categoryCreate pull-right bi bi-plus-circle" style="cursor: pointer"></a>
+                    <i class="categoryCreate pull-right bi bi-plus-circle" style="cursor: pointer"></i>
 
                     <div id="categoryList" class="list-group">
                         @foreach (var item in @Model.categories)
@@ -65,7 +65,6 @@
                 <input class="btn btn-primary mr-2" type="submit" value="Save" />
                 <a class="btn btn-secondary" asp-action="Index">Back</a>
             </div>
-        </form>
     </div>
 </div>
 
