--- a/FamilyBudget/Views/Home/Edit.cshtml
+++ b/FamilyBudget/Views/Home/Edit.cshtml
@@ -25,38 +25,40 @@
             <div class="row">
                 <div class="col-4">
                     <h4 class="text-center">Categories</h4>
-                    <i class="categoryCreate pull-right bi bi-plus-circle" style="cursor: pointer"></i>
+                    <a asp-controller="Modal" asp-action="CategoryCreate" class="categoryCreate pull-right bi bi-plus-circle text-decoration-none text-reset"></a>
 
                     <div id="categoryList" class="list-group">
                         @foreach (var item in @Model.categories)
                         {
-                            <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                            <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                                 <span class="p-2 projectListItem list-group-item-action flex-grow-1">
                                     @Html.DisplayFor(modelItem => item.Name)
                                 </span>
 
-                                <i id="@item.Id" class="bi bi-pencil categoryEdit mr-2" style="cursor: pointer"></i>
-                                <i id="@item.Id" class="bi bi-x-lg categoryDelete" style="cursor: pointer"></i>
-                            </a>
+
+                                <a asp-controller="Modal" asp-action="CategoryEdit" class="bi bi-pencil categoryEdit mr-2 text-decoration-none text-reset"></a>
+                                <a asp-controller="Modal" asp-action="CategoryDelete" class="bi bi-x-lg categoryDelete mr-2 text-decoration-none text-reset"></a>
+                            </div>
                         }
                     </div>
                 </div>
                 <div class="col-8">
                     <h4 class="text-center">ProjectMembers</h4>
-                    <a class="projectMemberCreate pull-right bi bi-plus-circle" style="cursor: pointer"></a>
+                    <a asp-controller="Modal" asp-action="ProjectMemberCreate" class="projectMemberCreate pull-right bi bi-plus-circle text-decoration-none text-reset"></a>
+
 
                     <div id="projectMemberList" class="list-group" count="@Model.projectMembers.Count">
 
                         @foreach (var item in @Model.projectMembers)
                         {
-                            <a class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+                            <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
                                 <span class="p-2 projectListItem list-group-item-action flex-grow-1">
                                     @Html.DisplayFor(modelItem => item.NameInProject)
                                 </span>
 
-                                <i id="@item.Id" class="bi bi-pencil projectMemberEdit mr-2" style="cursor: pointer"></i>
-                                <i id="@item.Id" class="bi bi-x-lg projectMemberDelete" style="cursor: pointer"></i>
-                            </a>
+                                <a asp-controller="Modal" asp-action="ProjectMemberEdit" class="bi bi-pencil projectMemberEdit mr-2 text-decoration-none text-reset"></a>
+                                <a asp-controller="Modal" asp-action="ProjectMemberDelete" class="bi bi-x-lg projectMemberDelete mr-2 text-decoration-none text-reset"></a>
+                            </div>
                         }
                     </div>
                 </div>
@@ -78,7 +80,7 @@
 
         $(".projectMemberCreate").click(function (e) {
             e.preventDefault();
-            $.get("Modal/ProjectMemberCreate/" + this.id, function (data) {
+            $.get(this.href, function (data) {
                 $('#projectEditDialogContent').html(data);
                 $('#projectEditModal').modal('show');
             });
@@ -86,7 +88,7 @@
 
         $(".projectMemberEdit").click(function (e) {
             e.preventDefault();
-            $.get("Modal/ProjectMemberEdit/" + this.id, function (data) {
+            $.get(this.href, function (data) {
                 $('#projectEditDialogContent').html(data);
                 $('#projectEditModal').modal('show');
             });
@@ -94,7 +96,7 @@
 
         $(".projectMemberDelete").click(function (e) {
             e.preventDefault();
-            $.get("Modal/ProjectMemberDelete/" + this.id, function (data) {
+            $.get(this.href, function (data) {
                 $('#projectEditDialogContent').html(data);
                 $('#projectEditModal').modal('show');
             });
@@ -104,7 +106,7 @@
 
         $(".categoryCreate").click(function (e) {
             e.preventDefault();
-            $.get("Modal/CategoryCreate/", function (data) {
+            $.get(this.href, function (data) {
                 $('#projectEditDialogContent').html(data);
                 $('#projectEditModal').modal('show');
             });
@@ -112,7 +114,7 @@
 
         $(".categoryEdit").click(function (e) {
             e.preventDefault();
-            $.get("Modal/CategoryEdit/" + this.id, function (data) {
+            $.get(this.href, function (data) {
                 $('#projectEditDialogContent').html(data);
                 $('#projectEditModal').modal('show');
             });
@@ -120,7 +122,7 @@
 
         $(".categoryDelete").click(function (e) {
             e.preventDefault();
-            $.get("Modal/CategoryDelete/" + this.id, function (data) {
+            $.get(this.href, function (data) {
                 $('#projectEditDialogContent').html(data);
                 $('#projectEditModal').modal('show');
             });
