--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -28,10 +28,15 @@
                 <i class="bi bi-pencil-square mr-1"></i>
                 Добавить доход
             </a>
+
             <a asp-controller="Modal" asp-action="AddFinOperation" asp-route-id="@Model.FilterViewModel.SelectedProject" asp-route-type="@FinType.Charge"
-               class="btn btn-info btn addCharge m-1 pull-right">
+               class="btn btn-info addCharge m-1 align">
                 <i class="bi bi-pencil-square mr-1"></i>
                 Добавить расход
+            </a>
+
+            <a asp-action="Index"class="btn btn-secondary m-1 pull-right">
+                К списку проектов
             </a>
         </div>
 
