--- a/FamilyBudget/Views/Home/Edit.cshtml
+++ b/FamilyBudget/Views/Home/Edit.cshtml
@@ -4,30 +4,51 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
 
 <div id="projectEditModal" class="modal fade">
-    <div id="projectEditDialogContent" class="modal-dialog modal-dialog-centered modal-lg"></div>
+    <div id="projectEditDialogContent" class="modal-dialog modal-dialog-centered"></div>
 </div>
+<div class="card">
+    <div class="card-header pt-1 pb-1 pr-1">
+        <div class="d-flex justify-content-between align-items-center">
 
+            <h3 class="mt-2 flex-grow-1">@Model.Name</h3>
 
-<div class="row">
-    <div class="container-fluid">
-        <form asp-controller="Projects" asp-action="Edit" asp-route-id="@Model.projectId">
-            <div class="form-group">
-                <label asp-for="@Model.project.Name" class="control-label"></label>
-                <input asp-for="@Model.project.Name" class="form-control" placeholder="Project name" />
-                <input type="hidden" asp-for="@Model.project.Id" />
-                <input type="hidden" asp-for="@Model.project.OwnerId" />
-                <span asp-validation-for="@Model.project.Name" class="text-danger"></span>
-            </div>      
-        </form>
-            <div class="row">
+            <a class="btn btn-secondary m-1 pull-right" asp-action="Index">
+                К списку проектов
+            </a>
+        </div>
+    </div>
+    <div class="card-body">
+        <div class="container-fluid">
+            <form asp-controller="Projects" asp-action="Edit" asp-route-id="@Model.projectId">
+                <div class="row p-2 justify-content-center">
+                    <div class="col-5 pr-1 pl-1">
+                        <label class="form-label mb-1 ml-1">Название проекта</label>
+                        <input asp-for="@Model.project.Name" class="form-control" placeholder="Project name" />
+                        <input type="hidden" asp-for="@Model.project.Id" />
+                        <input type="hidden" asp-for="@Model.project.OwnerId" />
+                        <span asp-validation-for="@Model.project.Name" class="text-danger"></span>
+                    </div>
+                    <div class="col-2 pr-1 pl-1">
+                        <label class="form-label mb-1 ml-1">&nbsp;</label>
+                        <button class="form-control mb-1 ml-1 btn btn-primary" type="submit">
+                            Сохранить
+                        </button>
+                    </div>
+                </div>
+
+            </form>
+            <div class="row mt-3">
                 <div class="col-4">
-                    <h4 class="text-center">Categories</h4>
-                    <a asp-controller="Modal" asp-action="CategoryCreate" class="categoryCreate pull-right bi bi-plus-circle text-decoration-none text-reset"></a>
+
 
                     <div id="categoryList" class="list-group">
+                        <h4 class="list-group-item text-center">
+                            Категории
+                            <a asp-controller="Modal" asp-action="CategoryCreate" asp-route-id="@Model.projectId"
+                               class="categoryCreate pull-right bi bi-plus-square btn btn-warning"></a>
+                        </h4>
                         @foreach (var item in @Model.categories)
                         {
                             <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
@@ -36,18 +57,24 @@
                                 </span>
 
 
-                                <a asp-controller="Modal" asp-action="CategoryEdit" class="bi bi-pencil categoryEdit mr-2 text-decoration-none text-reset"></a>
-                                <a asp-controller="Modal" asp-action="CategoryDelete" class="bi bi-x-lg categoryDelete mr-2 text-decoration-none text-reset"></a>
+                                <a asp-controller="Modal" asp-action="CategoryEdit" asp-route-id="@item.Id"
+                               class="bi bi-pencil categoryEdit mr-2 text-decoration-none text-reset"></a>
+
+                                <a asp-controller="Modal" asp-action="CategoryDelete" asp-route-id="@item.Id"
+                               class="bi bi-x-lg categoryDelete mr-2 text-decoration-none text-reset"></a>
                             </div>
                         }
                     </div>
                 </div>
                 <div class="col-8">
-                    <h4 class="text-center">ProjectMembers</h4>
-                    <a asp-controller="Modal" asp-action="ProjectMemberCreate" class="projectMemberCreate pull-right bi bi-plus-circle text-decoration-none text-reset"></a>
 
 
                     <div id="projectMemberList" class="list-group" count="@Model.projectMembers.Count">
+                        <h4 class="list-group-item text-center">
+                            Семья
+                            <a asp-controller="Modal" asp-action="ProjectMemberCreate" asp-route-id="@Model.projectId"
+                               class="projectMemberCreate pull-right bi bi-plus-square btn btn-warning"></a>
+                        </h4>
 
                         @foreach (var item in @Model.projectMembers)
                         {
@@ -55,78 +82,79 @@
                                 <span class="p-2 projectListItem list-group-item-action flex-grow-1">
                                     @Html.DisplayFor(modelItem => item.NameInProject)
                                 </span>
+                                <span class="p-2 projectListItem list-group-item-action flex-grow-1">
+                                    <label>@Html.DisplayFor(modelItem => item.User.Email)</label>
+                                </span>
 
-                                <a asp-controller="Modal" asp-action="ProjectMemberEdit" class="bi bi-pencil projectMemberEdit mr-2 text-decoration-none text-reset"></a>
-                                <a asp-controller="Modal" asp-action="ProjectMemberDelete" class="bi bi-x-lg projectMemberDelete mr-2 text-decoration-none text-reset"></a>
+                                <a asp-controller="Modal" asp-action="ProjectMemberEdit" asp-route-id="@item.Id"
+                               class="bi bi-pencil projectMemberEdit mr-2 text-decoration-none text-reset"></a>
+                               @if (@Model.project.OwnerId != item.UserId)
+                                {
+                                    <a asp-controller="Modal" asp-action="ProjectMemberDelete" asp-route-id="@item.Id"
+                                    class="bi bi-x-lg projectMemberDelete mr-2 text-decoration-none text-reset"></a>
+                                }
                             </div>
                         }
                     </div>
                 </div>
             </div>
-            <div class="pull-right">
-                <input class="btn btn-primary mr-2" type="submit" value="Save" />
-                <a class="btn btn-secondary" asp-action="Index">Back</a>
-            </div>
+        </div>
     </div>
 </div>
 
 @section scripts
 {
-    <script type="text/javascript">
-       
-        $.ajaxSetup({ cache: false });
+<script type="text/javascript">
 
-        // ProjectMember
+    $.ajaxSetup({ cache: false });
 
-        $(".projectMemberCreate").click(function (e) {
-            e.preventDefault();
-            $.get(this.href, function (data) {
-                $('#projectEditDialogContent').html(data);
-                $('#projectEditModal').modal('show');
-            });
+    // ProjectMember
+
+    $(".projectMemberCreate").click(function (e) {
+        e.preventDefault();
+        $.get(this.href, function (data) {
+            $('#projectEditDialogContent').html(data);
+            $('#projectEditModal').modal('show');
         });
-
-        $(".projectMemberEdit").click(function (e) {
-            e.preventDefault();
-            $.get(this.href, function (data) {
-                $('#projectEditDialogContent').html(data);
-                $('#projectEditModal').modal('show');
-            });
+    });
+    $(".projectMemberEdit").click(function (e) {
+        e.preventDefault();
+        $.get(this.href, function (data) {
+            $('#projectEditDialogContent').html(data);
+            $('#projectEditModal').modal('show');
         });
-
-        $(".projectMemberDelete").click(function (e) {
-            e.preventDefault();
-            $.get(this.href, function (data) {
-                $('#projectEditDialogContent').html(data);
-                $('#projectEditModal').modal('show');
-            });
+    });
+    $(".projectMemberDelete").click(function (e) {
+        e.preventDefault();
+        $.get(this.href, function (data) {
+            $('#projectEditDialogContent').html(data);
+            $('#projectEditModal').modal('show');
         });
+    });
 
-        // Category
+    // Category
 
-        $(".categoryCreate").click(function (e) {
-            e.preventDefault();
-            $.get(this.href, function (data) {
-                $('#projectEditDialogContent').html(data);
-                $('#projectEditModal').modal('show');
-            });
+    $(".categoryCreate").click(function (e) {
+        e.preventDefault();
+        $.get(this.href, function (data) {
+            $('#projectEditDialogContent').html(data);
+            $('#projectEditModal').modal('show');
         });
-
-        $(".categoryEdit").click(function (e) {
-            e.preventDefault();
-            $.get(this.href, function (data) {
-                $('#projectEditDialogContent').html(data);
-                $('#projectEditModal').modal('show');
-            });
+    });
+    $(".categoryEdit").click(function (e) {
+        e.preventDefault();
+        $.get(this.href, function (data) {
+            $('#projectEditDialogContent').html(data);
+            $('#projectEditModal').modal('show');
         });
-
-        $(".categoryDelete").click(function (e) {
-            e.preventDefault();
-            $.get(this.href, function (data) {
-                $('#projectEditDialogContent').html(data);
-                $('#projectEditModal').modal('show');
-            });
+    });
+    $(".categoryDelete").click(function (e) {
+        e.preventDefault();
+        $.get(this.href, function (data) {
+            $('#projectEditDialogContent').html(data);
+            $('#projectEditModal').modal('show');
         });
-        
-    </script>
+    });
+
+</script>
 }
