--- a/FamilyBudget/Views/Modal/CategoryCreate.cshtml
+++ b/FamilyBudget/Views/Modal/CategoryCreate.cshtml
@@ -3,32 +3,51 @@
 @{
     ViewData["Title"] = "CategoryCreate";
 }
+
 <div class="modal-content">
-    <h4>Category</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-controller="Categories" asp-action="Create">
+    <div class="modal-header pb-2">
+        @if (@Model.IsNotFound)
+        {
+            <h3 class="modal-title text-danger">This project is not found.</h3>
+        }
+        else if (@Model.IsForbid)
+        {
+            <h3 class="modal-title text-danger">This project is forbidden.</h3>
+        }
+        else
+        {
+            <h3 class="modal-title">Создать категорию</h3>
+        }
+
+        <button class="bi bi-x-lg btn" data-dismiss="modal" aria-label="Close"></button>
+    </div>
+    @if (Model.IsValid)
+    {
+        <form asp-controller="Categories" asp-action="Create">
+            <div class="modal-body container-fluid">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Name" class="control-label"></label>
                     <input asp-for="Name" class="form-control" />
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                    <input type="hidden" asp-for="ProjectId"/>
                 </div>
-                <div class="form-group">
-                    <label asp-for="ProjectId" class="control-label"></label>
-                    <select asp-for="ProjectId" class="form-control" asp-items="ViewBag.ProjectId"></select>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
-                </div>
-            </form>
+            </div>
+            <div class="modal-footer p-2">
+                <input type="submit" value="Создать" class="btn btn-success btn-ok" />
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+            </div>
+        </form>
+    }
+    else
+    {
+        <div class="modal-footer p-2">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
         </div>
-    </div>
+    }
 </div>
 
 @section Scripts {
-    @{
-    await Html.RenderPartialAsync("_ValidationScriptsPartial");
-}
+        @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
