--- a/FamilyBudget/Views/Home/Details.cshtml
+++ b/FamilyBudget/Views/Home/Details.cshtml
@@ -294,7 +294,7 @@
     }
     else
     {
-        <h4 class="text-center p-5">No FinOperation found.</h4>
+        <h4 class="text-center p-5">Финансовые операции не найдено.</h4>
     }
 </div>
 
@@ -340,7 +340,7 @@
                     },
                     title: {
                         display: true,
-                        text: 'Сгруппировано по категориям'
+                        text: 'По категориям'
                     }
                 }
             },
@@ -376,7 +376,7 @@
                     },
                     title: {
                         display: true,
-                        text: 'Сгруппировано по членам семьи'
+                        text: 'По членам семьи'
                     }
                 }
             },
@@ -411,7 +411,7 @@
                     },
                     title: {
                         display: true,
-                        text: 'Сгруппировано по типу финансовой операции'
+                        text: 'По типу финансовой операции'
                     }
                 }
             },
