--- a/FamilyBudget/Views/Shared/_Layout.cshtml
+++ b/FamilyBudget/Views/Shared/_Layout.cshtml
@@ -21,9 +21,7 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
-                        </li>
+                        <li class="nav-item"></li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -38,7 +36,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - FamilyBudget - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - FamilyBudget | Zakutko Sergey | 6.04.121.010.18.1
         </div>
     </footer>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.1/jquery.min.js"></script>
